--- a/static/index.html
+++ b/static/index.html
@@ -33,38 +33,43 @@ var host = window.location.host;
 var context = canvas.getContext("2d");
 var W = canvas.width  = window.innerWidth-6;
 var H = canvas.height = window.innerHeight-50;
+var starburst = new Image();
+var starburst2 = new Image();
+var stars = new Image();
 var wscounter = 0;
 var socket;
+
+starburst.src = "starburst.png"
+starburst2.src = "starburst2.png"
+stars.src = "stars.png"
 
 function debug(str) {
     var debugDiv = document.getElementById('debug');
     debugDiv.innerHTML = "" + str;
 }
-debug("Test");
-
 world = {};
 
 //XXX: TODO Make this prettier!
 function drawCircle(context,entity) {
     with(context) {
-        beginPath();
-        lineWidth = 3;
         var x = entity["x"];
         var y = entity["y"];
-        //moveTo(x,y);
-        fillStyle = entity["colour"];
-        strokeStyle = fillStyle;
-        arc(x, y, (entity["radius"])?entity["radius"]:50, 0, 2.0 * Math.PI, false);
-        stroke();
+        
+        if (entity["type"] === "starburst") {
+            context.drawImage(starburst, x-60, y-40);
+        }
+        else if (entity["type"] === "starburst2") {
+            context.drawImage(starburst2, x-60, y-40);
+        }
+        else {
+            context.drawImage(stars, x-60, y-40);
+        }
     }
 }
 
 function prepEntity(entity) {
-    if (!entity["colour"]) {
-        entity["colour"] = "#FF0000";
-    }
-    if (!entity["radius"]) {
-        entity["radius"] = 50;
+    if (!entity["type"]) {
+        entity["type"] = "stars";
     }
     return entity;
 }
@@ -237,16 +242,15 @@ mouse = (function() {
 // Add the application specific mouse listeners!
 //XXX: TODO Make these prettier!
 mouse.mousedowners.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'blue'});
+    addEntityWithoutName({'x':x,'y':y, 'type':'starburst2'});
 });
 
 mouse.mouseuppers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'red'});
+    addEntityWithoutName({'x':x,'y':y,'type':'starburst'});
 });
 
 mouse.mousedraggers.push(function(x,y,clicked,e) {
-    addEntityWithoutName({'x':x,'y':y,'colour':'green',
-                          'radius':10});
+    addEntityWithoutName({'x':x,'y':y,'type' : 'stars'});
 });
 
 
@@ -260,7 +264,6 @@ function wsSetup() {
     socket = new WebSocket(url);
     socket.onopen = function() {
         //XXX: TODO What are you going to do here?
-        debug("CONNECTED");
         // Track ws
         wscounter = wscounter + 1;
     };
